# GoodGameTournaments

./: .gitignore  Dockerfile  LinksForHtml.txt  README.md  SchemeOfProject.xmind  docker-compose.yml  dump.sql  make_steam.md  pyproject.toml  requirements.txt  template.env  to_sql.py
django_project/: manage.py
django_project/battles/: apps.py  models.py
django_project/battles/migrations/: 0001_initial.py  0002_initial.py
django_project/core/: models.py
django_project/django_project/: settings.py  urls.py
django_project/news/: admin.py  forms.py  models.py  urls.py  views.py
django_project/news/migrations/: 0001_initial.py  0002_alter_generalnewsmodel_options_and_more.py  0002_initial.py
django_project/news/templatetags/: markdown_filters.py
django_project/requests_for_membership/: apps.py
django_project/static/js/: spoiler.js
django_project/static/styles/: blocks copy.css  blocks.css  bootstrap.min.css  card-navbar.css  pagination.css  table.css  tag_a.css
django_project/teams/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
django_project/teams/migrations/: 0001_initial.py  0002_initial.py  0003_invitationtoteammodel.py  0004_membermodel_alter_teammodel_members_delete_member.py  0005_alter_membermodel_role_name.py  (+3 more)
django_project/tournaments/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
django_project/users/: apps.py  forms.py  models.py  pipeline.py  urls.py  views.py
fixtures/: admins.json
graphs/: deepseek copy.html  deepseek.html  graph.html  main.js  table.html  template.html
(+61 files in other folders)
